--- a/main.css
+++ b/main.css
@@ -4,15 +4,12 @@
     left: 0;
     top : 0;
     z-index: 1000;
-    grid-row:1/2;
     background-color: white;
     color: black;
   }
 
 
 .body {
-    grid-area:2/1;
-    grid-row: 2/2;
     scroll-behavior: smooth;
   }
 
@@ -46,7 +43,7 @@
     margin-left: 0.5rem;
 }
 
-.aside {
+.Lateral {
     margin-top: 6.5rem;
     grid-area: 1 / 3;
     scroll-margin-top: 7rem;
@@ -59,7 +56,7 @@
 
   }
 
-.aside a {
+.Lateral a {
     padding: .1875rem .5rem;
     margin-top: .125rem;
     margin-left: .3125rem;
